# enterprise-agent-marketplace

./: .dockerignore  .gitignore  Dockerfile  Makefile  app.py  app_ui.py  check_db.py  docker-compose.yml  langgraph_checkpoints.sqlite-shm  langgraph_checkpoints.sqlite-wal  pyproject.toml  readme.md  readme1.md  readme2.md  readme3.md  readme4.md  readme5.md  readme6.md  readme7.md  readme8.md  readme9.md  requirements.txt  structure.txt  tasks.py  test_api.py
agents/: admin_coding_agent.py  coding_agent.py  interview_agent.py  mentor_agent.py  performance_agent.py  research_agent.py  supervisor.py
database/: registry.py
dspy_modules/: query_enhancer.py  router.py  router_weights.json  train_router.py
mcp_servers/: knowledge_server.py  utility_server.py  workspace_server.py
memory/: chroma_store.py  memory_store.py  redis_store.py
middleware/: auth.py  validation.py
models/: request_models.py
rag/career_data/: AI_PM_Workbook_Complete.docx  master_cheat_sheet.md
rag/scripts/: generate_master_profile.py  ingest_books.py  ingest_career.py  ingest_code.py
scripts/: start.sh  status.sh  stop.sh
utils/: logger.py  telemetry.py  token_counter.py
